--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 <body>
   <h1>Cool Games</h1>
   <!-- really cool -->
-  <a href="https://liamparklo.github.io/sm64">Super Mario 64</a>
+  <a href="https://readingplusunblocked.github.io/sm64">Super Mario 64</a>
   <br>
-  <a href="https://liamparklo.github.io/solitaire">Spider Solitaire</a>
+  <a href="https://readingplusunblocked.github.io/solitaire">Spider Solitaire</a>
   <br>
-  <a href="https://liamparklo.github.io/smp">Stickman Parkour</a>
+  <a href="https://readingplusunblocked.github.io/smp">Stickman Parkour</a>
   <br>
-  <a href="https://liamparklo.github.io/ffr">Fast Food Rush</a>
+  <a href="https://readingplusunblocked.github.io/ffr">Fast Food Rush</a>
   <br>
-  <a href="https://liamparklo.github.io/sfb">Stack Fire Ball</a>
+  <a href="https://readingplusunblocked.github.io/sfb">Stack Fire Ball</a>
   <br>
-  <a href="https://liamparklo.github.io/nab">Nuts and Bolts</a>
+  <a href="https://readingplusunblocked.github.io/nab">Nuts and Bolts</a>
   <br>
-  <a href="https://liamparklo.github.io/bb">Block Blast</a>
+  <a href="https://readingplusunblocked.github.io/bb">Block Blast</a>
   <br>
-  <a href="https://liamparklo.github.io/bh">Basket Hoop</a>
+  <a href="https://readingplusunblocked.github.io/bh">Basket Hoop</a>
   <br>
-  <a href="https://liamparklo.github.io/tl">Troll Level</a>
+  <a href="https://readingplusunblocked.github.io/tl">Troll Level</a>
   <br>
-  <a href="https://liamparklo.github.io/whg">World's Hardest Game</a>
+  <a href="https://readingplusunblocked.github.io/whg">World's Hardest Game</a>
   <br>
-  <a href="https://liamparklo.github.io/ld">Level Devil</a>
+  <a href="https://readingplusunblocked.github.io/ld">Level Devil</a>
   <br>
-  <a href="https://liamparklo.github.io/idft3d">Idle Dino Farm Tycoon 3D</a>
+  <a href="https://readingplusunblocked.github.io/idft3d">Idle Dino Farm Tycoon 3D</a>
   <br>
 </body>
 </html>
