--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cool Games</title>
-  <link rel="icon" href="sad.png" type="image/png">
+  <link rel="icon" href="dbrp.jpeg" type="image/jpeg">
 </head>
 <body>
   <h1>Cool Games</h1>
