--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cool Games</title>
   <link rel="icon" href="dbrp.jpeg" type="image/jpeg">
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-  <h1>Cool Games</h1>
-  <!-- really cool -->
-  <a href="https://readingplusunblocked.github.io/sm64">Super Mario 64</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/solitaire">Spider Solitaire</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/smp">Stickman Parkour</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/ffr">Fast Food Rush</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/sfb">Stack Fire Ball</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/nab">Nuts and Bolts</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/bb">Block Blast</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/bh">Basket Hoop</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/tl">Troll Level</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/whg">World's Hardest Game</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/ld">Level Devil</a>
-  <br>
-  <a href="https://readingplusunblocked.github.io/idft3d">Idle Dino Farm Tycoon 3D</a>
-  <br>
+  
+  <div class="header-container">
+    <h1>Cool Games</h1>
+  </div>
+  
+  <div class="links-container">
+    <a href="https://readingplusunblocked.github.io/sm64">Super Mario 64</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/solitaire">Spider Solitaire</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/smp">Stickman Parkour</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/ffr">Fast Food Rush</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/sfb">Stack Fire Ball</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/nab">Nuts and Bolts</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/bb">Block Blast</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/bh">Basket Hoop</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/tl">Troll Level</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/whg">World's Hardest Game</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/ld">Level Devil</a>
+    <br>
+    <a href="https://readingplusunblocked.github.io/idft3d">Idle Dino Farm Tycoon 3D</a>
+    <br>
+  </div>
 </body>
 </html>
